--- a/timeline-client/src/app/timeline/timeline.component.html
+++ b/timeline-client/src/app/timeline/timeline.component.html
@@ -34,3 +34,32 @@
     </div>
   </div>
 </div>
+
+<ng-template #eventmodal>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Event</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-group full-width-input">
+        <label>Name</label>
+        <input class="form-control" placeholder="Event Name" formControlName="name" required>
+      </div>
+      <div class="form-group full-width-input">
+        <label>Description</label>
+        <input class="form-control" formControlName="description">
+      </div>
+      <div class="form-group full-width-input">
+        <label>Date</label>
+        <input class="form-control" formControlName="date" bsDatepicker>
+      </div>
+      <div class="button-row">
+        <button type="button" class="btn btn-primary" (click)="modalCallback()">Submit</button>
+        <button type="button" class="btn btn-light" (click)="onCancel()">Cancel</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
